Revision history for Perl extension AnyEvent.

        - fixed wrong documentation in AE::Socket.

5.01 Mon Aug 10 03:16:32 CEST 2009
	- last release broke EV child watchers :/.

5.0  Sun Aug  9 17:32:09 CEST 2009
	- officially introduce and document the AE API.
        - lowering the timeout at runtime did not have immediate effect
          in AnyEvent::Handle.
        - AE::Handle now has separate and independent read and write timeout
          settings.
        - probe for Guard module when AnyEvent::Util is loaded, not at
          runtime (Event doesn't like eval "use" from callbacks, and it avoids
          exporting the probe function).
        - Impl::IOAsync's io watchers did not use the filehandle emulation
          code to work around it's watcher limits.
        - work around IO::Async's problems with overloaded objects.
        - try to disable wearnings inside IO::Async, it's just too buggy.
        - do no longer use Event by default, only EV or Perl, Event is too buggy.
	- hackishly provide fast AE:: interface when EV or Perl is the backend.
        - inherit VERSION from AnyEvent::VERSION in most modules.

4.91 Thu Aug  6 15:42:45 CEST 2009
	- AE::Handle::starttls could get out of sync when the read buffer
          already contains some TLS handshake.
	- AE::Handle did not properly free the TLS session, causing bigger
          memory leaks in Net::SSLeay than expected (reported by toaster).
        - AE::Socket::tcp_connect will now artificially delay invoking
          the callback to avoid returning after invoking the callback.
        - convert many internal watcher uses to AE API.

4.9  Sat Aug  1 11:07:01 CEST 2009
	- Glib silently fails when registering a timeout with
          a negative value, so avoid that.
        - call condvar callback immediately  when it is set
          after the condition is already signalled.
        - check rbuf_max condition only after trying to consume
          data.